server_startup.log
Starting a Gradle Daemon, 1 busy Daemon could not be reused, use --status for details
Path for java installation '/usr/lib/jvm/openjdk-17' (Common Linux Locations) does not contain a java executable
Path for java installation '/usr/lib/jvm/openjdk-11' (Common Linux Locations) does not contain a java executable

> Task :compileJava
/home/aki/2602/workspace/apps/backend/ticket-core-service/src/main/java/com/ticketrush/api/controller/ReservationController.java:89: error: cannot find symbol
        return sseManager.subscribe(userId, seatId);
                         ^
  symbol:   method subscribe(Long,Long)
  location: variable sseManager of type SseEmitterManager
/home/aki/2602/workspace/apps/backend/ticket-core-service/src/main/java/com/ticketrush/global/messaging/KafkaReservationConsumer.java:39: error: incompatible types: Long cannot be converted to String
            sseManager.send(event.getUserId(), event.getSeatId(), "SUCCESS");
                                           ^
/home/aki/2602/workspace/apps/backend/ticket-core-service/src/main/java/com/ticketrush/global/messaging/KafkaReservationConsumer.java:56: error: incompatible types: Long cannot be converted to String
            sseManager.send(event.getUserId(), event.getSeatId(), status);
                                           ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
3 errors

> Task :compileJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 15s
1 actionable task: 1 executed
